--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="textview_login">Login</string>
     <string name="textview_register">sign up</string>
     <string name="textview_asforanaccount">Bạn chưa có tài khoản?</string>
+
+    //text error
+    <string name="error_username">Username  cannot be blank</string>
 </resources>
