--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,21 +34,22 @@
     <string name="error_username">Username  cannot be blank</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="label_name_task">Tên công việc</string>
-    <string name="label_not_note">Không có ghi chú</string>
-    <string name="label_note">Ghi chú</string>
-    <string name="label_score">Tự chấm điểm</string>
-    <string name="label_des">Mô tả</string>
-    <string name="label_time_end">Thời hạn</string>
-    <string name="label_success">Hoàn thành</string>
-    <string name="input_note">Nhập vào ghi chú...</string>
-    <string name="label_confirm">Xác nhận hoàn thành công việc này ?</string>
+    <string name="label_name_task">Task name</string>
+    <string name="label_not_note">No note</string>
+    <string name="label_note">Note</string>
+    <string name="label_score">Score yourself</string>
+    <string name="label_des">Description</string>
+    <string name="label_time_end">Duration</string>
+    <string name="label_success">Completed</string>
+    <string name="input_note">Enter note...</string>
+    <string name="label_confirm">Confirm completion of this job ?</string>
     <string name="label_oke">Oke</string>
-    <string name="label_cancel">Hủy</string>
-    <string name="toast">\"Phải phải chấm điểm và nhập ghi chú để hoàn thành\"</string>
+    <string name="label_cancel">Cancel</string>
+    <string name="toast">\"Must score and enter notes to complete\"</string>
     <string name="label_da_cap_nhat">Đã cập nhật công việc</string>
     <string name="signin_des">Login to use the application\'s functions.</string>
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
     <string name="signup_des">create an account to use application</string>
+    <string name="btn_complete">Complete</string>
 </resources>
